Sun May 10 22:46:47 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: protected ->
	  private.

Sun May 10 22:42:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86: new package.

	* net/loveruby/cflat/asm/ELFConstants.java ->
	  net/loveruby/cflat/sysdep/x86

	* net/loveruby/cflat/asm/AssemblyFile.java ->
	  net/loveruby/cflat/sysdep/x86

	net/loveruby/cflat/asm/Register.java

	* net/loveruby/cflat/platform/X86Linux.java ->
	  net/loveruby/cflat/sysdep/x86

	* net/loveruby/cflat/compiler/CodeGenerator.java ->
	  net/loveruby/cflat/sysdep/x86

	* net/loveruby/cflat/platform/Platform.java ->
	  net/loveruby/cflat/compiler

	* net/loveruby/cflat/sysdep/x86/Register.java: new file.

	* net/loveruby/cflat/compiler/Options.java: new method
	  #codeGenerator.

	* net/loveruby/cflat/compiler/Compiler.java: get CodeGenerator
	  from Options.

	* net/loveruby/cflat/compiler/CodeGeneratorOptions.java: make
	  public.

	* net/loveruby/cflat/ir/IR.java: now naturalType is useless
	  (provided by CodeGenerator).

Sun May 10 20:24:13 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Assembler.java -> AssemblyFile.java

	* net/loveruby/cflat/utils/AsmUtils.java: split #align from
	  AssemblyFile.

	* net/loveruby/cflat/type/StructType.java: use it.

	* net/loveruby/cflat/type/UnionType.java: use it.

	* net/loveruby/cflat/platform: new package to extract platform
	  dependent operations.

	* net/loveruby/cflat/compiler/Compiler.java: use it.

	* net/loveruby/cflat/compiler/CodeGenerator.java: use it.

	* net/loveruby/cflat/compiler/Options.java: provide Platform
	  object.

Thu May  7 13:00:09 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: should not return
	  Expr for stmt, to suppress wrong warning.

Thu May  7 12:55:41 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java (AddressNode):