@@ -1,3 +1,10 @@
+Sun May 10 23:04:44 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: move virtual
+	  stack to AssemblyFile.
+
+	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: ditto.
+
 Sun May 10 22:46:47 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: protected ->
